ProyectoLenguaje/5 - Final/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> START
Rule 1     START -> V PROC PROGRAM X PEND
Rule 2     X -> V P S
Rule 3     V -> DEF VARAUX X
Rule 4     VARAUX -> ID AS VARTYPE
Rule 5     VARAUX -> VECDEF
Rule 6     VARAUX -> MATDEF
Rule 7     VARAUX -> CUBEDEF
Rule 8     VECDEF -> ID LBRACK NINT RBRACK AS VARTYPE
Rule 9     MATDEF -> ID LBRACK NINT COMMA NINT RBRACK AS VARTYPE
Rule 10    CUBEDEF -> ID LBRACK NINT COMMA NINT COMMA NINT RBRACK AS VARTYPE
Rule 11    V -> LET VARASSIGN X
Rule 12    VARASSIGN -> VARID EQUAL E
Rule 13    VARASSIGN -> VARID LBRACK NUMTYPE RBRACK EQUAL E
Rule 14    VARASSIGN -> VARID LBRACK NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
Rule 15    VARASSIGN -> VARID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
Rule 16    VARASSIGN -> VARID EQUAL VARID LBRACK NUMTYPE RBRACK
Rule 17    VARASSIGN -> VARID EQUAL VARID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
Rule 18    VARASSIGN -> VARID EQUAL VARID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK
Rule 19    VARID -> ID
Rule 20    VARTYPE -> INT
Rule 21    VARTYPE -> FLOAT
Rule 22    NUMTYPE -> NINT
Rule 23    NUMTYPE -> ID
Rule 24    VAR -> NINT
Rule 25    VAR -> NFLOAT
Rule 26    VAR -> ID
Rule 27    V -> EMPTY
Rule 28    P -> CALL SUBAUX X
Rule 29    SUBAUX -> ID
Rule 30    PROC -> PROCEDURE PROCAUX LCURL X RCURL PROCAUX2 PROC
Rule 31    PROC -> <empty>
Rule 32    PROCAUX -> ID
Rule 33    PROCAUX2 -> <empty>
Rule 34    P -> IN INPAUX X
Rule 35    INPAUX -> LPAREN VARID RPAREN
Rule 36    P -> PRINT PRINTAUX X
Rule 37    PRINTAUX -> LPAREN VAR RPAREN
Rule 38    PRINTAUX -> LPAREN APOS ID APOS RPAREN
Rule 39    P -> EMPTY
Rule 40    S -> IF IFAUX LCURL X RCURL IFAUX2 X
Rule 41    IFAUX -> LPAREN LOGE RPAREN
Rule 42    IFAUX2 -> IFELSE
Rule 43    IFAUX2 -> IFAUX3
Rule 44    IFAUX3 -> <empty>
Rule 45    IFELSE -> ELSEAUX LCURL X RCURL IFAUX3
Rule 46    ELSEAUX -> ELSE
Rule 47    S -> WHILE WHILEAUX LCURL X RCURL WHILEAUX2 X
Rule 48    WHILEAUX -> LPAREN LOGE RPAREN
Rule 49    WHILEAUX2 -> <empty>
Rule 50    S -> DO DOAUX LCURL X RCURL WHILE DOAUX2 X
Rule 51    DOAUX -> <empty>
Rule 52    DOAUX2 -> LPAREN LOGE RPAREN
Rule 53    S -> FOR FORAUX LCURL X RCURL FORAUX2 X
Rule 54    FORAUX -> LPAREN FORASSIGN COMMA LOGE RPAREN
Rule 55    FORAUX2 -> <empty>
Rule 56    FORASSIGN -> VARID EQUAL E
Rule 57    S -> EMPTY
Rule 58    EMPTY -> <empty>
Rule 59    E -> E PLUS T
Rule 60    E -> E MINUS T
Rule 61    E -> T
Rule 62    T -> T MULT F
Rule 63    T -> T DIV F
Rule 64    T -> F
Rule 65    F -> LPAREN E RPAREN
Rule 66    F -> NINT
Rule 67    F -> NFLOAT
Rule 68    F -> ID
Rule 69    LOGE -> LOGE OR LOGT
Rule 70    LOGE -> NOT LOGT
Rule 71    LOGE -> LOGT
Rule 72    LOGT -> LOGT AND LOGF
Rule 73    LOGT -> LOGF
Rule 74    LOGF -> VAR LT VAR
Rule 75    LOGF -> VAR LE VAR
Rule 76    LOGF -> VAR GT VAR
Rule 77    LOGF -> VAR GE VAR
Rule 78    LOGF -> VAR EQ VAR
Rule 79    LOGF -> VAR NE VAR
Rule 80    LOGF -> LPAREN LOGE RPAREN

Terminals, with rules where they appear

AND                  : 72
APOS                 : 38 38
AS                   : 4 8 9 10
CALL                 : 28
COMMA                : 9 10 10 14 15 15 17 18 18 54
DEF                  : 3
DIV                  : 63
DO                   : 50
ELSE                 : 46
EQ                   : 78
EQUAL                : 12 13 14 15 16 17 18 56
FLOAT                : 21
FOR                  : 53
GE                   : 77
GT                   : 76
ID                   : 4 8 9 10 19 23 26 29 32 38 68
IF                   : 40
IN                   : 34
INT                  : 20
LBRACK               : 8 9 10 13 14 15 16 17 18
LCURL                : 30 40 45 47 50 53
LE                   : 75
LET                  : 11
LPAREN               : 35 37 38 41 48 52 54 65 80
LT                   : 74
MINUS                : 60
MULT                 : 62
NE                   : 79
NFLOAT               : 25 67
NINT                 : 8 9 9 10 10 10 22 24 66
NOT                  : 70
OR                   : 69
PEND                 : 1
PLUS                 : 59
PRINT                : 36
PROCEDURE            : 30
PROGRAM              : 1
RBRACK               : 8 9 10 13 14 15 16 17 18
RCURL                : 30 40 45 47 50 53
RPAREN               : 35 37 38 41 48 52 54 65 80
WHILE                : 47 50
error                : 

Nonterminals, with rules where they appear

CUBEDEF              : 7
DOAUX                : 50
DOAUX2               : 50
E                    : 12 13 14 15 56 59 60 65
ELSEAUX              : 45
EMPTY                : 27 39 57
F                    : 62 63 64
FORASSIGN            : 54
FORAUX               : 53
FORAUX2              : 53
IFAUX                : 40
IFAUX2               : 40
IFAUX3               : 43 45
IFELSE               : 42
INPAUX               : 34
LOGE                 : 41 48 52 54 69 80
LOGF                 : 72 73
LOGT                 : 69 70 71 72
MATDEF               : 6
NUMTYPE              : 13 14 14 15 15 15 16 17 17 18 18 18
P                    : 2
PRINTAUX             : 36
PROC                 : 1 30
PROCAUX              : 30
PROCAUX2             : 30
S                    : 2
START                : 0
SUBAUX               : 28
T                    : 59 60 61 62 63
V                    : 1 2
VAR                  : 37 74 74 75 75 76 76 77 77 78 78 79 79
VARASSIGN            : 11
VARAUX               : 3
VARID                : 12 13 14 15 16 16 17 17 18 18 35 56
VARTYPE              : 4 8 9 10
VECDEF               : 5
WHILEAUX             : 47
WHILEAUX2            : 47
X                    : 1 3 11 28 30 34 36 40 40 45 47 47 50 50 53 53

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . V PROC PROGRAM X PEND
    (3) V -> . DEF VARAUX X
    (11) V -> . LET VARASSIGN X
    (27) V -> . EMPTY
    (58) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    PROCEDURE       reduce using rule 58 (EMPTY -> .)
    PROGRAM         reduce using rule 58 (EMPTY -> .)

    START                          shift and go to state 1
    V                              shift and go to state 2
    EMPTY                          shift and go to state 5

state 1

    (0) S' -> START .



state 2

    (1) START -> V . PROC PROGRAM X PEND
    (30) PROC -> . PROCEDURE PROCAUX LCURL X RCURL PROCAUX2 PROC
    (31) PROC -> .

    PROCEDURE       shift and go to state 7
    PROGRAM         reduce using rule 31 (PROC -> .)

    PROC                           shift and go to state 6

state 3

    (3) V -> DEF . VARAUX X
    (4) VARAUX -> . ID AS VARTYPE
    (5) VARAUX -> . VECDEF
    (6) VARAUX -> . MATDEF
    (7) VARAUX -> . CUBEDEF
    (8) VECDEF -> . ID LBRACK NINT RBRACK AS VARTYPE
    (9) MATDEF -> . ID LBRACK NINT COMMA NINT RBRACK AS VARTYPE
    (10) CUBEDEF -> . ID LBRACK NINT COMMA NINT COMMA NINT RBRACK AS VARTYPE

    ID              shift and go to state 9

    VARAUX                         shift and go to state 8
    VECDEF                         shift and go to state 10
    MATDEF                         shift and go to state 11
    CUBEDEF                        shift and go to state 12

state 4

    (11) V -> LET . VARASSIGN X
    (12) VARASSIGN -> . VARID EQUAL E
    (13) VARASSIGN -> . VARID LBRACK NUMTYPE RBRACK EQUAL E
    (14) VARASSIGN -> . VARID LBRACK NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
    (15) VARASSIGN -> . VARID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
    (16) VARASSIGN -> . VARID EQUAL VARID LBRACK NUMTYPE RBRACK
    (17) VARASSIGN -> . VARID EQUAL VARID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
    (18) VARASSIGN -> . VARID EQUAL VARID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK
    (19) VARID -> . ID

    ID              shift and go to state 15

    VARASSIGN                      shift and go to state 13
    VARID                          shift and go to state 14

state 5

    (27) V -> EMPTY .

    PROCEDURE       reduce using rule 27 (V -> EMPTY .)
    PROGRAM         reduce using rule 27 (V -> EMPTY .)
    CALL            reduce using rule 27 (V -> EMPTY .)
    IN              reduce using rule 27 (V -> EMPTY .)
    PRINT           reduce using rule 27 (V -> EMPTY .)
    IF              reduce using rule 27 (V -> EMPTY .)
    WHILE           reduce using rule 27 (V -> EMPTY .)
    DO              reduce using rule 27 (V -> EMPTY .)
    FOR             reduce using rule 27 (V -> EMPTY .)
    PEND            reduce using rule 27 (V -> EMPTY .)
    RCURL           reduce using rule 27 (V -> EMPTY .)


state 6

    (1) START -> V PROC . PROGRAM X PEND

    PROGRAM         shift and go to state 16


state 7

    (30) PROC -> PROCEDURE . PROCAUX LCURL X RCURL PROCAUX2 PROC
    (32) PROCAUX -> . ID

    ID              shift and go to state 18

    PROCAUX                        shift and go to state 17

state 8

    (3) V -> DEF VARAUX . X
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (11) V -> . LET VARASSIGN X
    (27) V -> . EMPTY
    (58) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 58 (EMPTY -> .)
    IN              reduce using rule 58 (EMPTY -> .)
    PRINT           reduce using rule 58 (EMPTY -> .)
    IF              reduce using rule 58 (EMPTY -> .)
    WHILE           reduce using rule 58 (EMPTY -> .)
    DO              reduce using rule 58 (EMPTY -> .)
    FOR             reduce using rule 58 (EMPTY -> .)
    PROCEDURE       reduce using rule 58 (EMPTY -> .)
    PROGRAM         reduce using rule 58 (EMPTY -> .)
    PEND            reduce using rule 58 (EMPTY -> .)
    RCURL           reduce using rule 58 (EMPTY -> .)

    X                              shift and go to state 19
    V                              shift and go to state 20
    EMPTY                          shift and go to state 5

state 9

    (4) VARAUX -> ID . AS VARTYPE
    (8) VECDEF -> ID . LBRACK NINT RBRACK AS VARTYPE
    (9) MATDEF -> ID . LBRACK NINT COMMA NINT RBRACK AS VARTYPE
    (10) CUBEDEF -> ID . LBRACK NINT COMMA NINT COMMA NINT RBRACK AS VARTYPE

    AS              shift and go to state 21
    LBRACK          shift and go to state 22


state 10

    (5) VARAUX -> VECDEF .

    DEF             reduce using rule 5 (VARAUX -> VECDEF .)
    LET             reduce using rule 5 (VARAUX -> VECDEF .)
    CALL            reduce using rule 5 (VARAUX -> VECDEF .)
    IN              reduce using rule 5 (VARAUX -> VECDEF .)
    PRINT           reduce using rule 5 (VARAUX -> VECDEF .)
    IF              reduce using rule 5 (VARAUX -> VECDEF .)
    WHILE           reduce using rule 5 (VARAUX -> VECDEF .)
    DO              reduce using rule 5 (VARAUX -> VECDEF .)
    FOR             reduce using rule 5 (VARAUX -> VECDEF .)
    PROCEDURE       reduce using rule 5 (VARAUX -> VECDEF .)
    PROGRAM         reduce using rule 5 (VARAUX -> VECDEF .)
    PEND            reduce using rule 5 (VARAUX -> VECDEF .)
    RCURL           reduce using rule 5 (VARAUX -> VECDEF .)


state 11

    (6) VARAUX -> MATDEF .

    DEF             reduce using rule 6 (VARAUX -> MATDEF .)
    LET             reduce using rule 6 (VARAUX -> MATDEF .)
    CALL            reduce using rule 6 (VARAUX -> MATDEF .)
    IN              reduce using rule 6 (VARAUX -> MATDEF .)
    PRINT           reduce using rule 6 (VARAUX -> MATDEF .)
    IF              reduce using rule 6 (VARAUX -> MATDEF .)
    WHILE           reduce using rule 6 (VARAUX -> MATDEF .)
    DO              reduce using rule 6 (VARAUX -> MATDEF .)
    FOR             reduce using rule 6 (VARAUX -> MATDEF .)
    PROCEDURE       reduce using rule 6 (VARAUX -> MATDEF .)
    PROGRAM         reduce using rule 6 (VARAUX -> MATDEF .)
    PEND            reduce using rule 6 (VARAUX -> MATDEF .)
    RCURL           reduce using rule 6 (VARAUX -> MATDEF .)


state 12

    (7) VARAUX -> CUBEDEF .

    DEF             reduce using rule 7 (VARAUX -> CUBEDEF .)
    LET             reduce using rule 7 (VARAUX -> CUBEDEF .)
    CALL            reduce using rule 7 (VARAUX -> CUBEDEF .)
    IN              reduce using rule 7 (VARAUX -> CUBEDEF .)
    PRINT           reduce using rule 7 (VARAUX -> CUBEDEF .)
    IF              reduce using rule 7 (VARAUX -> CUBEDEF .)
    WHILE           reduce using rule 7 (VARAUX -> CUBEDEF .)
    DO              reduce using rule 7 (VARAUX -> CUBEDEF .)
    FOR             reduce using rule 7 (VARAUX -> CUBEDEF .)
    PROCEDURE       reduce using rule 7 (VARAUX -> CUBEDEF .)
    PROGRAM         reduce using rule 7 (VARAUX -> CUBEDEF .)
    PEND            reduce using rule 7 (VARAUX -> CUBEDEF .)
    RCURL           reduce using rule 7 (VARAUX -> CUBEDEF .)


state 13

    (11) V -> LET VARASSIGN . X
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (11) V -> . LET VARASSIGN X
    (27) V -> . EMPTY
    (58) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 58 (EMPTY -> .)
    IN              reduce using rule 58 (EMPTY -> .)
    PRINT           reduce using rule 58 (EMPTY -> .)
    IF              reduce using rule 58 (EMPTY -> .)
    WHILE           reduce using rule 58 (EMPTY -> .)
    DO              reduce using rule 58 (EMPTY -> .)
    FOR             reduce using rule 58 (EMPTY -> .)
    PROCEDURE       reduce using rule 58 (EMPTY -> .)
    PROGRAM         reduce using rule 58 (EMPTY -> .)
    PEND            reduce using rule 58 (EMPTY -> .)
    RCURL           reduce using rule 58 (EMPTY -> .)

    X                              shift and go to state 23
    V                              shift and go to state 20
    EMPTY                          shift and go to state 5

state 14

    (12) VARASSIGN -> VARID . EQUAL E
    (13) VARASSIGN -> VARID . LBRACK NUMTYPE RBRACK EQUAL E
    (14) VARASSIGN -> VARID . LBRACK NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
    (15) VARASSIGN -> VARID . LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
    (16) VARASSIGN -> VARID . EQUAL VARID LBRACK NUMTYPE RBRACK
    (17) VARASSIGN -> VARID . EQUAL VARID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
    (18) VARASSIGN -> VARID . EQUAL VARID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK

    EQUAL           shift and go to state 24
    LBRACK          shift and go to state 25


state 15

    (19) VARID -> ID .

    EQUAL           reduce using rule 19 (VARID -> ID .)
    LBRACK          reduce using rule 19 (VARID -> ID .)
    RPAREN          reduce using rule 19 (VARID -> ID .)


state 16

    (1) START -> V PROC PROGRAM . X PEND
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (11) V -> . LET VARASSIGN X
    (27) V -> . EMPTY
    (58) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 58 (EMPTY -> .)
    IN              reduce using rule 58 (EMPTY -> .)
    PRINT           reduce using rule 58 (EMPTY -> .)
    IF              reduce using rule 58 (EMPTY -> .)
    WHILE           reduce using rule 58 (EMPTY -> .)
    DO              reduce using rule 58 (EMPTY -> .)
    FOR             reduce using rule 58 (EMPTY -> .)
    PEND            reduce using rule 58 (EMPTY -> .)

    V                              shift and go to state 20
    X                              shift and go to state 26
    EMPTY                          shift and go to state 5

state 17

    (30) PROC -> PROCEDURE PROCAUX . LCURL X RCURL PROCAUX2 PROC

    LCURL           shift and go to state 27


state 18

    (32) PROCAUX -> ID .

    LCURL           reduce using rule 32 (PROCAUX -> ID .)


state 19

    (3) V -> DEF VARAUX X .

    PROCEDURE       reduce using rule 3 (V -> DEF VARAUX X .)
    PROGRAM         reduce using rule 3 (V -> DEF VARAUX X .)
    CALL            reduce using rule 3 (V -> DEF VARAUX X .)
    IN              reduce using rule 3 (V -> DEF VARAUX X .)
    PRINT           reduce using rule 3 (V -> DEF VARAUX X .)
    IF              reduce using rule 3 (V -> DEF VARAUX X .)
    WHILE           reduce using rule 3 (V -> DEF VARAUX X .)
    DO              reduce using rule 3 (V -> DEF VARAUX X .)
    FOR             reduce using rule 3 (V -> DEF VARAUX X .)
    PEND            reduce using rule 3 (V -> DEF VARAUX X .)
    RCURL           reduce using rule 3 (V -> DEF VARAUX X .)


state 20

    (2) X -> V . P S
    (28) P -> . CALL SUBAUX X
    (34) P -> . IN INPAUX X
    (36) P -> . PRINT PRINTAUX X
    (39) P -> . EMPTY
    (58) EMPTY -> .

  ! shift/reduce conflict for CALL resolved as shift
  ! shift/reduce conflict for IN resolved as shift
  ! shift/reduce conflict for PRINT resolved as shift
    CALL            shift and go to state 29
    IN              shift and go to state 30
    PRINT           shift and go to state 31
    IF              reduce using rule 58 (EMPTY -> .)
    WHILE           reduce using rule 58 (EMPTY -> .)
    DO              reduce using rule 58 (EMPTY -> .)
    FOR             reduce using rule 58 (EMPTY -> .)
    PROCEDURE       reduce using rule 58 (EMPTY -> .)
    PROGRAM         reduce using rule 58 (EMPTY -> .)
    PEND            reduce using rule 58 (EMPTY -> .)
    RCURL           reduce using rule 58 (EMPTY -> .)

  ! CALL            [ reduce using rule 58 (EMPTY -> .) ]
  ! IN              [ reduce using rule 58 (EMPTY -> .) ]
  ! PRINT           [ reduce using rule 58 (EMPTY -> .) ]

    P                              shift and go to state 28
    EMPTY                          shift and go to state 32

state 21

    (4) VARAUX -> ID AS . VARTYPE
    (20) VARTYPE -> . INT
    (21) VARTYPE -> . FLOAT

    INT             shift and go to state 34
    FLOAT           shift and go to state 35

    VARTYPE                        shift and go to state 33

state 22

    (8) VECDEF -> ID LBRACK . NINT RBRACK AS VARTYPE
    (9) MATDEF -> ID LBRACK . NINT COMMA NINT RBRACK AS VARTYPE
    (10) CUBEDEF -> ID LBRACK . NINT COMMA NINT COMMA NINT RBRACK AS VARTYPE

    NINT            shift and go to state 36


state 23

    (11) V -> LET VARASSIGN X .

    PROCEDURE       reduce using rule 11 (V -> LET VARASSIGN X .)
    PROGRAM         reduce using rule 11 (V -> LET VARASSIGN X .)
    CALL            reduce using rule 11 (V -> LET VARASSIGN X .)
    IN              reduce using rule 11 (V -> LET VARASSIGN X .)
    PRINT           reduce using rule 11 (V -> LET VARASSIGN X .)
    IF              reduce using rule 11 (V -> LET VARASSIGN X .)
    WHILE           reduce using rule 11 (V -> LET VARASSIGN X .)
    DO              reduce using rule 11 (V -> LET VARASSIGN X .)
    FOR             reduce using rule 11 (V -> LET VARASSIGN X .)
    PEND            reduce using rule 11 (V -> LET VARASSIGN X .)
    RCURL           reduce using rule 11 (V -> LET VARASSIGN X .)


state 24

    (12) VARASSIGN -> VARID EQUAL . E
    (16) VARASSIGN -> VARID EQUAL . VARID LBRACK NUMTYPE RBRACK
    (17) VARASSIGN -> VARID EQUAL . VARID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
    (18) VARASSIGN -> VARID EQUAL . VARID LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK
    (59) E -> . E PLUS T
    (60) E -> . E MINUS T
    (61) E -> . T
    (19) VARID -> . ID
    (62) T -> . T MULT F
    (63) T -> . T DIV F
    (64) T -> . F
    (65) F -> . LPAREN E RPAREN
    (66) F -> . NINT
    (67) F -> . NFLOAT
    (68) F -> . ID

    ID              shift and go to state 40
    LPAREN          shift and go to state 42
    NINT            shift and go to state 43
    NFLOAT          shift and go to state 44

    VARID                          shift and go to state 37
    E                              shift and go to state 38
    T                              shift and go to state 39
    F                              shift and go to state 41

state 25

    (13) VARASSIGN -> VARID LBRACK . NUMTYPE RBRACK EQUAL E
    (14) VARASSIGN -> VARID LBRACK . NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
    (15) VARASSIGN -> VARID LBRACK . NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK EQUAL E
    (22) NUMTYPE -> . NINT
    (23) NUMTYPE -> . ID

    NINT            shift and go to state 46
    ID              shift and go to state 47

    NUMTYPE                        shift and go to state 45

state 26

    (1) START -> V PROC PROGRAM X . PEND

    PEND            shift and go to state 48


state 27

    (30) PROC -> PROCEDURE PROCAUX LCURL . X RCURL PROCAUX2 PROC
    (2) X -> . V P S
    (3) V -> . DEF VARAUX X
    (11) V -> . LET VARASSIGN X
    (27) V -> . EMPTY
    (58) EMPTY -> .

    DEF             shift and go to state 3
    LET             shift and go to state 4
    CALL            reduce using rule 58 (EMPTY -> .)
    IN              reduce using rule 58 (EMPTY -> .)
    PRINT           reduce using rule 58 (EMPTY -> .)
    IF              reduce using rule 58 (EMPTY -> .)
    WHILE           reduce using rule 58 (EMPTY -> .)
    DO              reduce using rule 58 (EMPTY -> .)
    FOR             reduce using rule 58 (EMPTY -> .)
    RCURL           reduce using rule 58 (EMPTY -> .)

    X                              shift and go to state 49
    V                              shift and go to state 20
    EMPTY                          shift and go to state 5

state 28

    (2) X -> V P . S
    (40) S -> . IF IFAUX LCURL X RCURL IFAUX2 X
    (47) S -> . WHILE WHILEAUX LCURL X RCURL WHILEAUX2 X
    (50) S -> . DO DOAUX LCURL X RCURL WHILE DOAUX2 X
    (53) S -> . FOR FORAUX LCURL X RCURL FORAUX2 X
    (57) S -> . EMPTY
    (58) EMPTY -> .

  ! shift/reduce conflict for IF resolved as shift
  ! shift/reduce conflict for WHILE resolved as shift
  ! shift/reduce conflict for DO resolved as shift
  ! shift/reduce conflict for FOR resolved as shift
    IF              shift and go to state 51
    WHILE           shift and go to state 52
    DO              shift and go to state 53
    FOR             shift and go to state 54
    CALL            reduce using rule 58 (EMPTY -> .)
    IN              reduce using rule 58 (EMPTY -> .)
    PRINT           reduce using rule 58 (EMPTY -> .)
    PROCEDURE       reduce using rule 58 (EMPTY -> .)
    PROGRAM         reduce using rule 58 (EMPTY -> .)
    PEND            reduce using rule 58 (EMPTY -> .)
    RCURL           reduce using rule 58 (EMPTY -> .)

  ! IF              [ reduce using rule 58 (EMPTY -> .) ]
  ! WHILE           [ reduce using rule 58 (EMPTY -> .) ]
  ! DO              [ reduce using rule 58 (EMPTY -> .) ]
  ! FOR             [ reduce using rule 58 (EMPTY -> .) ]

    S                              shift and go to state 50
    EMPTY                          shift and go to state 55

state 29

    (28) P -> CALL . SUBAUX X
    (29) SUBAUX -> . ID

    ID              shift and go to state 57

    SUBAUX                         shift and go to state 56

state 30

    (34) P -> IN . INPAUX X
    (35) INPAUX -> . LPAREN VARID RPAREN

    LPAREN          shift and go to state 59

    INPAUX                         shift and go to state 58

state 31

    (36) P -> PRINT . PRINTAUX X
    (37) PRINTAUX -> . LPAREN VAR RPAREN
    (38) PRINTAUX -> . LPAREN APOS ID APOS RPAREN

    LPAREN          shift and go to state 61

    PRINTAUX                       shift and go to state 60

state 32

    (39) P -> EMPTY .

    CALL            reduce using rule 39 (P -> EMPTY .)
    IN              reduce using rule 39 (P -> EMPTY .)
    PRINT           reduce using rule 39 (P -> EMPTY .)
    IF              reduce using rule 39 (P -> EMPTY .)
    WHILE           reduce using rule 39 (P -> EMPTY .)
    DO              reduce using rule 39 (P -> EMPTY .)
    FOR             reduce using rule 39 (P -> EMPTY .)
    PROCEDURE       reduce using rule 39 (P -> EMPTY .)
    PROGRAM         reduce using rule 39 (P -> EMPTY .)
    PEND            reduce using rule 39 (P -> EMPTY .)
    RCURL           reduce using rule 39 (P -> EMPTY .)


state 33

    (4) VARAUX -> ID AS VARTYPE .

    DEF             reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    LET             reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    CALL            reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    IN              reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    PRINT           reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    IF              reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    WHILE           reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    DO              reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    FOR             reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    PROCEDURE       reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    PROGRAM         reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    PEND            reduce using rule 4 (VARAUX -> ID AS VARTYPE .)
    RCURL           reduce using rule 4 (VARAUX -> ID AS VARTYPE .)


state 34

    (20) VARTYPE -> INT .

    DEF             reduce using rule 20 (VARTYPE -> INT .)
    LET             reduce using rule 20 (VARTYPE -> INT .)
    CALL            reduce using rule 20 (VARTYPE -> INT .)
    IN              reduce using rule 20 (VARTYPE -> INT .)
    PRINT           reduce using rule 20 (VARTYPE -> INT .)
    IF              reduce using rule 20 (VARTYPE -> INT .)
    WHILE           reduce using rule 20 (VARTYPE -> INT .)
    DO              reduce using rule 20 (VARTYPE -> INT .)
    FOR             reduce using rule 20 (VARTYPE -> INT .)
    PROCEDURE       reduce using rule 20 (VARTYPE -> INT .)
    PROGRAM         reduce using rule 20 (VARTYPE -> INT .)
    PEND            reduce using rule 20 (VARTYPE -> INT .)
    RCURL           reduce using rule 20 (VARTYPE -> INT .)


state 35

    (21) VARTYPE -> FLOAT .

    DEF             reduce using rule 21 (VARTYPE -> FLOAT .)
    LET             reduce using rule 21 (VARTYPE -> FLOAT .)
    CALL            reduce using rule 21 (VARTYPE -> FLOAT .)
    IN              reduce using rule 21 (VARTYPE -> FLOAT .)
    PRINT           reduce using rule 21 (VARTYPE -> FLOAT .)
    IF              reduce using rule 21 (VARTYPE -> FLOAT .)
    WHILE           reduce using rule 21 (VARTYPE -> FLOAT .)
    DO              reduce using rule 21 (VARTYPE -> FLOAT .)
    FOR             reduce using rule 21 (VARTYPE -> FLOAT .)
    PROCEDURE       reduce using rule 21 (VARTYPE -> FLOAT .)
    PROGRAM         reduce using rule 21 (VARTYPE -> FLOAT .)
    PEND            reduce using rule 21 (VARTYPE -> FLOAT .)
    RCURL           reduce using rule 21 (VARTYPE -> FLOAT .)


state 36

    (8) VECDEF -> ID LBRACK NINT . RBRACK AS VARTYPE
    (9) MATDEF -> ID LBRACK NINT . COMMA NINT RBRACK AS VARTYPE
    (10) CUBEDEF -> ID LBRACK NINT . COMMA NINT COMMA NINT RBRACK AS VARTYPE

    RBRACK          shift and go to state 62
    COMMA           shift and go to state 63


state 37

    (16) VARASSIGN -> VARID EQUAL VARID . LBRACK NUMTYPE RBRACK
    (17) VARASSIGN -> VARID EQUAL VARID . LBRACK NUMTYPE COMMA NUMTYPE RBRACK
    (18) VARASSIGN -> VARID EQUAL VARID . LBRACK NUMTYPE COMMA NUMTYPE COMMA NUMTYPE RBRACK

    LBRACK          shift and go to state 64


state 38

    (12) VARASSIGN -> VARID EQUAL E .
    (59) E -> E . PLUS T
    (60) E -> E . MINUS T

    DEF             reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    LET             reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    CALL            reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    IN              reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    PRINT           reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    IF              reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    WHILE           reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    DO              reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    FOR             reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    PROCEDURE       reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    PROGRAM         reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    PEND            reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    RCURL           reduce using rule 12 (VARASSIGN -> VARID EQUAL E .)
    PLUS            shift and go to state 65
    MINUS           shift and go to state 66


state 39

    (61) E -> T .
    (62) T -> T . MULT F
    (63) T -> T . DIV F

    PLUS            reduce using rule 61 (E -> T .)
    MINUS           reduce using rule 61 (E -> T .)
    DEF             reduce using rule 61 (E -> T .)
    LET             reduce using rule 61 (E -> T .)
    CALL            reduce using rule 61 (E -> T .)
    IN              reduce using rule 61 (E -> T .)
    PRINT           reduce using rule 61 (E -> T .)
    IF              reduce using rule 61 (E -> T .)
    WHILE           reduce using rule 61 (E -> T .)
    DO              reduce using rule 61 (E -> T .)
    FOR             reduce using rule 61 (E -> T .)
    PROCEDURE       reduce using rule 61 (E -> T .)
    PROGRAM         reduce using rule 61 (E -> T .)
    PEND            reduce using rule 61 (E -> T .)
    RCURL           reduce using rule 61 (E -> T .)
    RPAREN          reduce using rule 61 (E -> T .)
    COMMA           reduce using rule 61 (E -> T .)
    MULT            shift and go to state 67
    DIV             shift and go to state 68


state 40

    (19) VARID -> ID .
    (68) F -> ID .

    LBRACK          reduce using rule 19 (VARID -> ID .)
    MULT            reduce using rule 68 (F -> ID .)
